fix: overflow on mobile devices

--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -102,6 +102,10 @@
       display: block;
       margin: 20px auto 0 auto;
       width: 124px;
+
+      h1 {
+        font-size: 40px;
+      }
     }
   
     .logo-container {
